plugins/kotlin/idea/tests/testData/multiplatform/unresolvedInMultiplatformLibrary/jvm/jvm.kt
package sample

fun jvm() {
    println(common())
    println(<error descr="[UNRESOLVED_REFERENCE] Unresolved reference: js" textAttributesKey="null">js</error>())
}
